@@ -74,7 +74,7 @@ public class BenchmarkInterceptor implements Interceptor {
      */
     public Object beforeInvoke(Object object, String methodName, Object[] arguments) {
         if (!calls.containsKey(methodName)) calls.put(methodName, new LinkedList());
-        ((List) calls.get(methodName)).add(new Long(System.currentTimeMillis()));
+        ((List) calls.get(methodName)).add(Long.valueOf(System.currentTimeMillis()));
 
         return null;
     }
@@ -87,7 +87,7 @@ public class BenchmarkInterceptor implements Interceptor {
      * @return result
      */
     public Object afterInvoke(Object object, String methodName, Object[] arguments, Object result) {
-        ((List) calls.get(methodName)).add(new Long(System.currentTimeMillis()));
+        ((List) calls.get(methodName)).add(Long.valueOf(System.currentTimeMillis()));
         return result;
     }
 
@@ -112,14 +112,14 @@ public class BenchmarkInterceptor implements Interceptor {
             result.add(line);
             line[0] = iter.next();
             List times = (List) calls.get(line[0]);
-            line[1] = new Integer(times.size() / 2);
+            line[1] = Integer.valueOf(times.size() / 2);
             int accTime = 0;
             for (Iterator it = times.iterator(); it.hasNext();) {
                 Long start = (Long) it.next();
                 Long end = (Long) it.next();
                 accTime += end.longValue() - start.longValue();
             }
-            line[2] = new Long(accTime);
+            line[2] = Long.valueOf(accTime);
         }
         return result;
     }
